# daily_stock_analysis

./: analyzer_service.py  pyproject.toml
